--- a/音乐播放器源码/index.html
+++ b/音乐播放器源码/index.html
@@ -16,6 +16,7 @@
 		<!--<link href="/css/app.9404a58a.css" rel="preload" as="style">-->
 		<link href="css/chunk-vendors.472b95f5.css" rel="stylesheet">
 		<link href="css/app.9404a58a.css" rel="stylesheet">
+		<button></button>
 	</head>
 	<body>
 		<div style="display:none">
